Fix dropdown menu bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,25 @@ body {
     font-weight: 600;
 }
 
+.addItem_form #suggestions {
+    position: absolute;
+    top: 21.6px;
+    right: 5%;
+    width: 40%;
+    background-color: #333;
+    color: #f2f2f2;
+}
+
+.addItem_form #suggestions li {
+    padding: 0.4em;
+}
+
+.addItem_form #suggestions li:hover {
+    background-color: #f2f2f2;
+    color: #111;
+    cursor: pointer;
+}
+
 /* output */
 
 .output-wrap {
